--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -1,50 +1,66 @@
 <?link rel="stylesheet" type="text/css" href="/style.css"?>
 <zk>
 	<borderlayout hflex="1" vflex="1">
-		<north height="100px" border="none" >
-			<include src="/chapter3/banner.zul"/>
+		<north height="100px" border="none">
+			<include src="/cabecalho.zul" />
 		</north>
 		<center id="mainContent" autoscroll="true">
-			<vbox vflex="1" hflex="1" align="center" spacing="20px"  sclass="demo-main">
-				<label value="Welcome to ZK Essentials" sclass="head1"/>
-				<label value="Chapter 3" sclass="head2"/>
+			<vbox vflex="1" hflex="1" align="center" spacing="20px"
+				sclass="demo-main">
+
+				<label value="Testes" sclass="head1" />
+
+				<label value="Gráficos Live" sclass="head2" />
 				<hlayout>
-					<a href="/chapter3/">Demo</a>
+					<a href="/live/flashcharts.zul">Demo</a>
 				</hlayout>
 				
-				<label value="Chapter 4" sclass="head2"/>
+				<label value="Requisições JSON usando GSON" sclass="head2" />
 				<hlayout>
-					<a href="/chapter4/index-zscript.zul">ZScript</a>
-					<a href="/chapter4/index.zul">Java</a>
+					<a href="/hydroserver/insertSensor.zul">Insert Sensor</a>
 				</hlayout>
-				
-				<label value="Chapter 5" sclass="head2"/>
-				<hlayout>
-					<a href="/chapter5/index.zul">MVC</a>
-					<a href="/chapter5/index-mvvm.zul">MVVM</a>
-				</hlayout>
-				
-				<label value="Chapter 6" sclass="head2"/>
-				<hlayout>
-					<a href="/chapter6/index.zul">MVC</a>
-					<a href="/chapter6/index-mvvm.zul">MVVM</a>
-				</hlayout>
-				
-				<label value="Chapter 7" sclass="head2"/>
-				<hlayout>
-					<a href="/chapter7/pagebased/index.zul">Page-based</a>
-					<a href="/chapter7/ajaxbased/index.zul">AJAX-based</a>
-				</hlayout>
-				
-				<label value="Chapter 8" sclass="head2"/>
-				<hlayout>
-					<a href="/chapter8/index.zul">Demo</a>
-				</hlayout>
-				
+
+
+
+				<!-- 				<label value="Welcome to ZK Essentials" sclass="head1"/> -->
+				<!-- 				<label value="Chapter 3" sclass="head2"/> -->
+				<!-- 				<hlayout> -->
+				<!-- 					<a href="/chapter3/">Demo</a> -->
+				<!-- 				</hlayout> -->
+
+				<!-- 				<label value="Chapter 4" sclass="head2"/> -->
+				<!-- 				<hlayout> -->
+				<!-- 					<a href="/chapter4/index-zscript.zul">ZScript</a> -->
+				<!-- 					<a href="/chapter4/index.zul">Java</a> -->
+				<!-- 				</hlayout> -->
+
+				<!-- 				<label value="Chapter 5" sclass="head2"/> -->
+				<!-- 				<hlayout> -->
+				<!-- 					<a href="/chapter5/index.zul">MVC</a> -->
+				<!-- 					<a href="/chapter5/index-mvvm.zul">MVVM</a> -->
+				<!-- 				</hlayout> -->
+
+				<!-- 				<label value="Chapter 6" sclass="head2"/> -->
+				<!-- 				<hlayout> -->
+				<!-- 					<a href="/chapter6/index.zul">MVC</a> -->
+				<!-- 					<a href="/chapter6/index-mvvm.zul">MVVM</a> -->
+				<!-- 				</hlayout> -->
+
+				<!-- 				<label value="Chapter 7" sclass="head2"/> -->
+				<!-- 				<hlayout> -->
+				<!-- 					<a href="/chapter7/pagebased/index.zul">Page-based</a> -->
+				<!-- 					<a href="/chapter7/ajaxbased/index.zul">AJAX-based</a> -->
+				<!-- 				</hlayout> -->
+
+				<!-- 				<label value="Chapter 8" sclass="head2"/> -->
+				<!-- 				<hlayout> -->
+				<!-- 					<a href="/chapter8/index.zul">Demo</a> -->
+				<!-- 				</hlayout> -->
+
 			</vbox>
 		</center>
 		<south height="50px" border="none">
-			<include src="/chapter3/footer.zul"/>
+			<include src="/rodape.zul" />
 		</south>
 	</borderlayout>
 </zk>
