Alguns ajustes em insertSensor. Mais modificações em insertObservation.

--- a/src/main/webapp/hydroserver/insertSensor.zul
+++ b/src/main/webapp/hydroserver/insertSensor.zul
@@ -28,7 +28,7 @@
 							</cell>
 						</row>
 						<row>
-							<cell sclass="row-title">Oferta :</cell>
+							<cell sclass="row-title">Offering :</cell>
 							<cell>
 								<label id="oferta"
 									value="hydronode.ufjf.br/oferta/" />
