--- a/src/main/webapp/cabecalho.zul
+++ b/src/main/webapp/cabecalho.zul
@@ -1,15 +1,15 @@
 <div hflex="1" vflex="1" sclass="banner">
 	<hbox hflex="1" vflex="1" align="center">
 
-		<image src="/imagens/UFJF-600-dpi-1024x740.jpg"
-			style="border-radius: 15px; margin-left:10px; margin-right:10px"
-			width="90px" />
+		<image src="/imagens/UFJF-250x180.jpg"
+			style="border-radius: 10px;"
+			height = "40px" />
 
 		<div width="400px">
-			<label value="Projeto HydroNode" sclass="banner-head" />
+			<label value="Projeto HydroNode" sclass="banner-head-menor" />
 		</div>
 		<hbox hflex="1" vflex="1" pack="end" align="end">
-			Anonymous
+			Anônimo
 		</hbox>
 	</hbox>
 </div>
