--- a/src/main/webapp/hydroserver/insertSensor.zul
+++ b/src/main/webapp/hydroserver/insertSensor.zul
@@ -1,7 +1,7 @@
 <?link rel="stylesheet" type="text/css" href="/style.css"?>
 <zk>
 	<borderlayout hflex="1" vflex="1">
-		<north height="100px" border="none">
+		<north height="50px" border="none">
 			<include src="/cabecalho.zul" />
 		</north>
 		<center id="mainContent" autoscroll="true"
@@ -35,7 +35,9 @@
 							</cell>
 						</row>
 						<row>
-							<cell sclass="row-title">Observable Property :</cell>
+							<cell sclass="row-title">
+								Observable Property :
+							</cell>
 							<cell>
 								<textbox id="observableProperty"
 									constraint="no empty: Campo obrigatório" width="400px" />
@@ -68,10 +70,11 @@
 				<hlayout>
 
 				</hlayout>
-			</vlayout>
+			</vlayout> 	
 		</center>
-		<south height="50px" border="none">
-			<include src="/rodape.zul" />
-		</south>
+
+<!-- 		<south height="50px" border="none"> -->
+<!-- 			<include src="/rodape.zul" /> -->
+<!-- 		</south> -->
 	</borderlayout>
 </zk>
