--- a/src/main/webapp/proteger/procedure.zul
+++ b/src/main/webapp/proteger/procedure.zul
@@ -1,10 +1,17 @@
 <zk>
 	<style>
-		.banner { background-color:#102d35; color: white; padding: 5px
-		10px; } .banner-head{ font-size: 2.4em; } .banner .logout{
-		text-decoration: underline; cursor: pointer; }
+		.meuGrid { min-width: 350px }
 
-		.footer { background-color:#102d35; color: white; padding-top:
+		.banner { background-color: #102d35; color: white; padding: 5px;
+		}
+
+		.banner-head { font-size: 2.4em; }
+
+		.banner-head-menor { font-size: 1.6em; }
+
+		.banner .logout { text-decoration: underline; cursor: pointer; }
+
+		.footer { background-color: #102d35; color: white; padding-top:
 		5px; }
 
 		.footer a,.footer a:VISITED { color: white; }
@@ -12,28 +19,29 @@
 		.sidebar a,.sidebar a:VISITED { color: black; text-decoration:
 		none; }
 
-		.sidebar-fn{ cursor: pointer; }
+		.sidebar-fn { cursor: pointer; }
 
+		.head1 { font-size: large; }
 
-		.head1{ font-size: large; } .head2{ font-size: medium; }
+		.head2 { font-size: medium; }
 
-		.row-title .z-label{ font-weight: bold; color:#636363; }
+		.row-title .z-label { font-weight: bold; color: #636363; }
 
-		.fn-caption .z-caption-l{ font-weight: bold; font-size: medium;
+		.fn-caption .z-caption-l { font-weight: bold; font-size: medium;
 		color: #636363; }
 
-		.complete-todo .z-label{ text-decoration: line-through; }
+		.complete-todo .z-label { text-decoration: line-through; }
 
-		.warn{ color:red; }
+		.warn { color: red; }
 
-		.demo-main a,.demo-main a:VISITED{ color:#636363;
+		.demo-main a,.demo-main a:VISITED { color: #636363;
 		text-decoration: underline; font-size: smaller; }
 
-		.todo-box { padding-right:4px; }
+		.todo-box { padding-right: 4px; }
 
 	</style>
 	<borderlayout hflex="1" vflex="1">
-		<north height="100px" border="none">
+		<north height="50px" border="none">
 			<include src="/cabecalho.zul" />
 		</north>
 		<center id="mainContent" autoscroll="true"
@@ -116,8 +124,9 @@
 
 			</vbox>
 		</center>
-		<south height="50px" border="none">
-			<include src="/rodape.zul" />
-		</south>
+
+		<!-- 		<south height="50px" border="none"> -->
+		<!-- 			<include src="/rodape.zul" /> -->
+		<!-- 		</south> -->
 	</borderlayout>
 </zk>
