--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,24 +1,34 @@
-.banner {
-	background-color:#102d35;
-	color: white;
-	padding: 5px 10px;
+.meuGrid {
+	min-width: 350px
 }
-.banner-head{
+
+.banner {
+	background-color: #102d35;
+	color: white;
+	padding: 5px;
+}
+
+.banner-head {
 	font-size: 2.4em;
 }
-.banner .logout{
+
+.banner-head-menor {
+	font-size: 1.6em;
+}
+
+.banner .logout {
 	text-decoration: underline;
 	cursor: pointer;
-} 
+}
 
 .footer {
-	background-color:#102d35;
+	background-color: #102d35;
 	color: white;
 	padding-top: 5px;
 }
 
 .footer a,.footer a:VISITED {
-	color: white;	
+	color: white;
 }
 
 .sidebar a,.sidebar a:VISITED {
@@ -26,43 +36,43 @@
 	text-decoration: none;
 }
 
-.sidebar-fn{
+.sidebar-fn {
 	cursor: pointer;
 }
 
-
-.head1{
+.head1 {
 	font-size: large;
 }
-.head2{
+
+.head2 {
 	font-size: medium;
 }
 
-.row-title .z-label{
+.row-title .z-label {
 	font-weight: bold;
-	color:#636363;
+	color: #636363;
 }
 
-.fn-caption .z-caption-l{
+.fn-caption .z-caption-l {
 	font-weight: bold;
 	font-size: medium;
 	color: #636363;
 }
 
-.complete-todo .z-label{
+.complete-todo .z-label {
 	text-decoration: line-through;
 }
 
-.warn{
-	color:red;
+.warn {
+	color: red;
 }
 
-.demo-main a,.demo-main a:VISITED{
-	color:#636363;
+.demo-main a,.demo-main a:VISITED {
+	color: #636363;
 	text-decoration: underline;
-	font-size: smaller;	
+	font-size: smaller;
 }
 
 .todo-box {
-	padding-right:4px;
+	padding-right: 4px;
 }
