--- a/src/main/webapp/hydroserver/insertObservation.zul
+++ b/src/main/webapp/hydroserver/insertObservation.zul
@@ -1,7 +1,7 @@
 <?link rel="stylesheet" type="text/css" href="/style.css"?>
 <zk>
 	<borderlayout hflex="1" vflex="1">
-		<north height="100px" border="none">
+		<north height="50px" border="none">
 			<include src="/cabecalho.zul" />
 		</north>
 		<center id="mainContent" autoscroll="true"
@@ -103,11 +103,13 @@
 						</row>
 					</rows>
 				</grid>
-				<popup id="popOferta" >
+				<popup id="popOferta">
 					<html>
+
 
 						
 						<![CDATA[Teste de tooltip]]>
+						
 						
 						
 					</html>
@@ -117,8 +119,9 @@
 				</hlayout>
 			</vlayout>
 		</center>
-		<south height="50px" border="none">
-			<include src="/rodape.zul" />
-		</south>
+
+<!-- 		<south height="50px" border="none"> -->
+<!-- 			<include src="/rodape.zul" /> -->
+<!-- 		</south> -->
 	</borderlayout>
 </zk>
