--- a/src/main/webapp/proteger/offering.zul
+++ b/src/main/webapp/proteger/offering.zul
@@ -1,5 +1,7 @@
 <zk>
 	<style>
+		.titulo { font-size: 1.6em }
+
 		.borda-azul { border: 2px solid #102d35;}
 
 		.meu-grid { min-width: 350px }
@@ -47,11 +49,12 @@
 		</north>
 		<center id="mainContent" autoscroll="true"
 			apply="br.ufjf.hydronode.paginas.offering.SpecificOffering">
-			<vbox vflex="1" hflex="1" align="center" spacing="20px"
+			<vbox vflex="1" hflex="1" align="center" spacing="10px"
 				sclass="demo-main">
 
+				<separator />
 				<label id="titulo" value="Detalhes do Sensor"
-					sclass="head1" />
+					sclass="titulo" />
 
 				<vlayout>
 					<grid hflex="min" align="center"
@@ -101,8 +104,9 @@
 						</rows>
 					</grid>
 
+					<separator />
 					<label id="tituloMapa"
-						value="Geolocalização das Leituras" sclass="head2" />
+						value="Geolocalização das Leituras" sclass="head1" />
 
 					<label id="texto"
 						value="Esse sensor ainda não registrou leituras." />
@@ -111,14 +115,15 @@
 						<gmaps id="mapa" width="815px" height="490px"
 							showSmallCtrl="true" visible="false">
 
-<!-- 							<gmarker id="mapaMarker" open="true" /> -->
-<!-- 							<ginfo id="mapaInfo" open="false" /> -->
-							<gpolygon id="mapaPoligono" visible="false" />
+							<!-- 							<gmarker id="mapaMarker" open="true" /> -->
+							<!-- 							<ginfo id="mapaInfo" open="false" /> -->
+							<!-- 							<gpolygon id="mapaPoligono" visible="false" /> -->
 
 						</gmaps>
 					</div>
 
 					<button id="botaoLeituras" label="Exibir Leituras"
+						visible="false"
 						style="font-size: medium; padding-top: 8px; padding-bottom: 7px; padding-left: 9px; padding-right: 9px;" />
 
 					<grid width="815px" id="gridLeituras"
