--- a/src/main/webapp/proteger/procedure.zul
+++ b/src/main/webapp/proteger/procedure.zul
@@ -1,6 +1,8 @@
 <zk>
 	<style>
-		.borda-azul { border: 2px solid #102d35; }
+		.titulo { font-size: 1.6em }
+
+		.borda-azul { border: 2px solid #102d35;}
 
 		.meu-grid { min-width: 350px }
 
