Ajustes na tela de Estação (procedure) e Sensor (offering)

--- a/src/main/webapp/proteger/offering.zul
+++ b/src/main/webapp/proteger/offering.zul
@@ -60,7 +60,7 @@
 					<grid hflex="min" align="center"
 						sclass="meu-grid">
 						<columns>
-							<column align="right" />
+							<column align="right" valign="top" />
 							<column />
 						</columns>
 						<rows>
