--- a/src/main/webapp/swe/estacao/index.zul
+++ b/src/main/webapp/swe/estacao/index.zul
@@ -8,10 +8,11 @@
 			<vbox vflex="1" hflex="1" align="center" spacing="20px"
 				sclass="demo-main">
 
-				<label value="Index da SWE" sclass="head1" />
+				<label value="Index da estação" sclass="head1" />
+
+
 			</vbox>
 		</center>
-
 		<!-- 		<south height="50px" border="none"> -->
 		<!-- 			<include src="/rodape.zul" /> -->
 		<!-- 		</south> -->
