--- a/src/main/webapp/hydroserver/insertObservation.zul
+++ b/src/main/webapp/hydroserver/insertObservation.zul
@@ -4,6 +4,9 @@
 		<north height="50px" border="none">
 			<include src="/cabecalho.zul" />
 		</north>
+		<west width="200px" border="none">
+			<include src="/barraLateral.zul" />
+		</west>
 		<center id="mainContent" autoscroll="true"
 			apply="br.ufjf.hydronode.requisicoes.InsertObservation">
 			<vlayout>
@@ -106,12 +109,8 @@
 				<popup id="popOferta">
 					<html>
 
-
-						
 						<![CDATA[Teste de tooltip]]>
-						
-						
-						
+		
 					</html>
 				</popup>
 				<hlayout>
@@ -120,8 +119,8 @@
 			</vlayout>
 		</center>
 
-<!-- 		<south height="50px" border="none"> -->
-<!-- 			<include src="/rodape.zul" /> -->
-<!-- 		</south> -->
+		<!-- 		<south height="50px" border="none"> -->
+		<!-- 			<include src="/rodape.zul" /> -->
+		<!-- 		</south> -->
 	</borderlayout>
 </zk>
