--- a/src/main/webapp/hydroserver/insertSensor.zul
+++ b/src/main/webapp/hydroserver/insertSensor.zul
@@ -4,6 +4,9 @@
 		<north height="50px" border="none">
 			<include src="/cabecalho.zul" />
 		</north>
+		<west width="200px" border="none">
+			<include src="/barraLateral.zul" />
+		</west>
 		<center id="mainContent" autoscroll="true"
 			apply="br.ufjf.hydronode.requisicoes.InsertSensor">
 			<vlayout>
@@ -70,11 +73,11 @@
 				<hlayout>
 
 				</hlayout>
-			</vlayout> 	
+			</vlayout>
 		</center>
 
-<!-- 		<south height="50px" border="none"> -->
-<!-- 			<include src="/rodape.zul" /> -->
-<!-- 		</south> -->
+		<!-- 		<south height="50px" border="none"> -->
+		<!-- 			<include src="/rodape.zul" /> -->
+		<!-- 		</south> -->
 	</borderlayout>
 </zk>
