--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -8,7 +8,7 @@
 			<vbox vflex="1" hflex="1" align="center" spacing="20px"
 				sclass="demo-main">
 
-				<label value="Testes" sclass="head1" />
+				<label value="Tela Inicial - Testes" sclass="head1" />
 
 				<label value="Gráficos Live" sclass="head2" />
 
@@ -25,6 +25,10 @@
 						Insert Observation
 					</a>
 				</vlayout>
+
+				<label value="SWE" sclass="head2" />
+
+				<a href="/swe/">Index</a>
 
 			</vbox>
 		</center>
