Ajustes dos links em varias telas

--- a/src/main/webapp/proteger/procedure.zul
+++ b/src/main/webapp/proteger/procedure.zul
@@ -4,8 +4,8 @@
 		#102d35; border: 0; }
 
 		.meu-menubar .z-menu-text { color: white; font-size: 1.0em;
-		text-shadow: -1px 0 #102d35, 0 1px #102d35, 1px 0 #102d35, 0 -1px
-		#102d35; }
+		text-shadow: -1px 0 #102d35, 0 1px #102d35, 1px 0 #102d35, 0
+		-1px #102d35; }
 
 		.titulo { font-size: 1.6em }
 
@@ -45,8 +45,9 @@
 
 		.warn { color: red; }
 
-		.demo-main a,.demo-main a:VISITED { color: #636363;
-		text-decoration: underline; font-size: smaller; }
+		.demo-main a,.demo-main a:VISITED { color: #3090FC;
+		text-decoration: none; } .demo-main a:HOVER { color: #0E509C;
+		text-decoration: none; }
 
 		.todo-box { padding-right: 4px; }
 	</style>
